# juce-plugin-template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
.agents/: commit-instructions.md
.agents/skills/code-review/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_and_test.yml  ci.yaml
assets/: CMakeLists.txt
source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
test/: AudioProcessorTest.cpp  CMakeLists.txt
